correct method of URI validation