@@ -1,7 +1,10 @@
 package com.bbn.sd2;
 
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.security.GeneralSecurityException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -211,8 +214,9 @@ public class DictionaryEntry {
 			URI name_as_uri = null;
 			boolean uri_exists = fullbox(row, header_map.get("SynBioHub URI"));
 			try {
-				name_as_uri = URI.create(row.get(header_map.get("Common Name")).toString());
-			} catch(IllegalArgumentException e) { /* malformed URL: ignore and leave as null */ }
+				name_as_uri = new URL(row.get(header_map.get("Common Name")).toString()).toURI();
+			} catch(URISyntaxException e) { /* Bad URL: ignore and leave as null */
+			} catch(MalformedURLException e) { /* Bad URL: ignore and leave as null */ }
 			if(uri_exists || name_as_uri==null) {
 				name = row.get(header_map.get("Common Name")).toString();
 			} else {
